--- a/src/app/feature-modules/user/home-con/home-page/mag/choose-mag/choose-mag.component.html
+++ b/src/app/feature-modules/user/home-con/home-page/mag/choose-mag/choose-mag.component.html
@@ -8,7 +8,7 @@
 <div class="modal-body">
   <div>
     <div class="save-list">
-      <div class="s-i-l d-b" (click)="savePost()">
+      <div class="s-i-l d-b"  >
         <p>Your Mag will be added to <i><b>{{magContainer.title}}</b></i></p>
         <div class="tag-l-c">
           <ngx-spinner bdColor="rgba(152,61,61,0)"
