--- a/src/app/feature-modules/user/profile/blocked-users/blocked-users.component.html
+++ b/src/app/feature-modules/user/profile/blocked-users/blocked-users.component.html
@@ -1,10 +1,10 @@
-<div class="set-con db">
+<div class="set-con">
   <div class="n-c set-p-h">
 
     <div class="n-c-h ">
       <div class="a-c" routerLink="../profilesetting">
         <i class="fa fa-angle-left"></i>
-        <span class="set-h">Blocked Users</span>
+        <span class="set-h">BLOCKED USERS</span>
         <!--<i class="fa fa-search float-right srch"></i>-->
 
       </div>
