--- a/src/app/feature-modules/user/profile/pages-setting/pages-setting.component.html
+++ b/src/app/feature-modules/user/profile/pages-setting/pages-setting.component.html
@@ -1,4 +1,4 @@
-<div class="set-con db">
+<div class="set-con">
   <div class="n-c set-p-h">
 
     <div class="n-c-h ">
@@ -14,7 +14,7 @@
 
   <div class="set-b-con">
     <div class="hdesc">
-      <p>Privacy</p>
+      <p>PRIVACY SETTING</p>
       <hr>
     </div>
     <div class="container">
