--- a/src/app/feature-modules/user/search/search/search.component.html
+++ b/src/app/feature-modules/user/search/search/search.component.html
@@ -1,4 +1,4 @@
-<div class="search-m-con">
+<div class="search-m-con hf">
 
   <div class="search-con">
     <form class="">
@@ -62,8 +62,6 @@
     </button>
   </div>
 
-
-
   <div id="viewport" *ngIf="showPads">
 
     <ngx-spinner bdColor="rgba(152,61,61,0)"
@@ -94,8 +92,6 @@
       </li>
     </ul>
   </div>
-
-
 
   <div class="">
 
