--- a/src/app/feature-modules/user/home-con/home-page/mag-container/mag-container.component.css
+++ b/src/app/feature-modules/user/home-con/home-page/mag-container/mag-container.component.css
@@ -20,3 +20,19 @@
   background-color: #f0f0f0;
 }
 
+div.scrollmenu {
+  background-color: #333;
+  overflow: auto;
+  white-space: nowrap;
+}
+
+div.scrollmenu post {
+  display: inline-block;
+  color: white;
+  text-align: center;
+  padding: 14px;
+  text-decoration: none;
+}
+.phold{
+  /*display: inline-block;*/
+}
