--- a/src/app/feature-modules/user/work-board/schedule/schedule.component.html
+++ b/src/app/feature-modules/user/work-board/schedule/schedule.component.html
@@ -1,4 +1,4 @@
-<div class="n-c">
+<div class="n-c hf">
 
   <div class="n-c-h">
     <div class="a-c">
@@ -35,7 +35,7 @@
                        name="todaySchedule"></ngx-spinner>
 
           <div class="custom-control custom-checkbox" *ngFor="let ts of todaySchedule; let i = index;">
-            <input type="checkbox" class="custom-control-input" id="ts{{i}}" (change)="toggleTask(i,1)" >
+            <input type="checkbox" class="custom-control-input"  [checked]="ts.markAsDone" id="ts{{i}}" (change)="toggleTask(i,1)" >
             <label class="custom-control-label" for="ts{{i}}">
               <del *ngIf="ts.markAsDone">{{ts.title}}</del>
               <span *ngIf="!ts.markAsDone">{{ts.title}}</span>
@@ -61,7 +61,11 @@
                        [fullScreen]="false"
                        name="tomorrowSchedule"></ngx-spinner>
           <div class="custom-control custom-checkbox" *ngFor="let ts of tomorrowSchedule;let i = index;">
-            <input type="checkbox" class="custom-control-input" id="tts{{i}}" (change)="toggleTask(i,2)">
+            <input type="checkbox"
+                   class="custom-control-input"
+                   id="tts{{i}}"
+                   [checked]="ts.markAsDone"
+                   (change)="toggleTask(i,2)">
             <label class="custom-control-label" for="tts{{i}}">
               <del *ngIf="ts.markAsDone">{{ts.title}}</del>
               <span *ngIf="!ts.markAsDone">{{ts.title}}</span>
@@ -89,7 +93,11 @@
                        [fullScreen]="false"
                        name="soonSchedule"></ngx-spinner>
           <div class="custom-control custom-checkbox" *ngFor="let ts of soonSchedules;let i = index;">
-            <input type="checkbox" class="custom-control-input" id="sts{{i}}"  (change)="toggleTask(i,3)">
+            <input type="checkbox"
+                   class="custom-control-input"
+                   id="sts{{i}}"
+                   [checked]="ts.markAsDone"
+                   (change)="toggleTask(i,3)">
             <label class="custom-control-label" for="sts{{i}}">
               <del *ngIf="ts.markAsDone">{{ts.title}}</del>
               <span *ngIf="!ts.markAsDone">{{ts.title}}</span>
