--- a/src/app/feature-modules/user/work-board/school-progress/school-progress.component.html
+++ b/src/app/feature-modules/user/work-board/school-progress/school-progress.component.html
@@ -1,202 +1,260 @@
-<div class="n-c">
+<div class="hf">
+  <div class="n-c">
 
-  <div class="n-c-h">
-    <div class="a-c">
-      <i class="fa fa-angle-left" routerLink="../dashboard"></i>
-      <!--<i class="fa fa-search float-right srch"></i>-->
+    <div class="n-c-h">
+      <div class="a-c">
+        <i class="fa fa-angle-left" routerLink="../dashboard"></i>
+        <!--<i class="fa fa-search float-right srch"></i>-->
+      </div>
+      <p class="nh">Progress</p>
     </div>
-    <p class="nh">Progress</p>
-  </div>
 
-</div>
-<div class="s-p-c">
-  <div class="s-h-t">
-    <p>Statistics</p>
   </div>
+  <div class="s-p-c">
+    <div class="s-h-t">
+      <p>Statistics</p>
+    </div>
 
-  <div class="s-m-c">
+    <div class="s-m-c">
+      <div class="container">
+        <form  class="row sc-b-c">
+          <div class="col">
+            <div class="btn-group" dropdown>
+              <button id="assessment-button" dropdownToggle type="button" class="btn f dropdown-toggle"
+                      aria-controls="assessment-basic">
+                {{currentAssessment?.name}}<span class="caret"></span>
+              </button>
+              <ul id="assessment-basic" *dropdownMenu class="dropdown-menu"
+                  role="menu" aria-labelledby="assessment-button">
+
+                <li role="menuitem" *ngFor="let a of assesments" (click)="changeAssessment(a)"><a class="dropdown-item">{{a.name}}</a></li>
+
+
+              </ul>
+            </div>
+            <!--<div class="form-group">-->
+            <!--<select class="form-control f"-->
+            <!--id="exampleFormControlSelect1"-->
+            <!--(change)="updateData()"-->
+            <!--formControlName="assesment">-->
+            <!--<option value="{{a.id}}" *ngFor="let a of assesments">{{a.name}}</option>-->
+
+            <!--</select>-->
+            <!--</div>-->
+          </div>
+          <div class="col">
+            <div class="form-group">
+              <div class="btn-group" dropdown>
+                <button id="semester-button" dropdownToggle type="button" class="btn s dropdown-toggle"
+                        aria-controls="semester-basic">
+                  {{currentSemester}} <span class="caret"></span>
+                </button>
+                <ul id="semester-basic" *dropdownMenu class="dropdown-menu"
+                    role="menu" aria-labelledby="semester-button">
+
+                  <li role="menuitem" *ngFor="let s of semesters | keyvalue" (click)="changeSemester(s)"><a class="dropdown-item">{{s['value']}}</a>
+                  </li>
+                </ul>
+              </div>
+              <!--<select class="form-control s" id="2"-->
+              <!--formControlName="semester"-->
+              <!--(change)="updateData()">-->
+              <!--<option *ngFor="let s of semesters  | keyvalue" value="{{s['value']}}">{{s['value']}}</option>-->
+
+              <!--</select>-->
+
+            </div>
+          </div>
+          <div class="col">
+            <div class="form-group">
+              <div class="btn-group" dropdown>
+                <button id="button-basic" dropdownToggle type="button" class="btn l dropdown-toggle"
+                        aria-controls="dropdown-basic">
+                  {{currentYear}} <span class="caret"></span>
+                </button>
+                <ul id="dropdown-basic" *dropdownMenu class="dropdown-menu"
+                    role="menu" aria-labelledby="button-basic">
+
+                  <li role="menuitem" (click)="changeYear(2020)"><a class="dropdown-item">2020</a></li>
+                  <li role="menuitem" (click)="changeYear(2021)"><a class="dropdown-item">2021</a></li>
+                  <li role="menuitem" (click)="changeYear(2022)"><a class="dropdown-item">2022</a></li>
+                  <li role="menuitem" (click)="changeYear(2023)"><a class="dropdown-item">2023</a></li>
+                  <li role="menuitem" (click)="changeYear(2024)"><a class="dropdown-item">2024</a></li>
+                  <li role="menuitem" (click)="changeYear(2025)"><a class="dropdown-item">2025</a></li>
+
+
+                </ul>
+              </div>
+              <!--<select class="form-control l" id="3"-->
+              <!--formControlName="year"-->
+              <!--(change)="updateData()">-->
+              <!--<option value="2020">2020</option>-->
+              <!--<option value="2021">2021</option>-->
+              <!--<option value="2022">2022</option>-->
+              <!--<option value="2023">2023</option>-->
+              <!--<option value="2024">2024</option>-->
+              <!--<option value="2025">2025</option>-->
+              <!--</select>-->
+            </div>
+          </div>
+        </form>
+      </div>
+    </div>
+
+    <div class="s-p-c-c">
+
+      <div>
+        <div class="a-r-c">
+          <p *ngIf="showResult">{{acr}}% <span><small>cumulative average result</small></span></p>
+        </div>
+        <div style="display: block" class="p-r">
+          <div class="l-c">
+            <ngx-spinner bdColor="rgba(152,61,61,0)"
+                         size="default"
+                         color="#2b2e3f"
+                         type="ball-fall"
+                         [fullScreen]="false"
+                         name="barChart"></ngx-spinner>
+          </div>
+          <canvas baseChart class="p-r"
+                  [datasets]="barChartData"
+                  [labels]="barChartLabels"
+                  [options]="barChartOptions"
+                  [legend]="barChartLegend"
+                  [chartType]="barChartType">
+          </canvas>
+        </div>
+      </div>
+
+    </div>
+
     <div class="container">
-      <form [formGroup]="progressFormGroup" class="row">
-        <div class="col">
-          <div class="form-group">
-            <select class="form-control f"
-                    id="exampleFormControlSelect1"
-                    (change)="updateData()"
-                    formControlName="assesment">
-              <option value="{{a.id}}" *ngFor="let a of assesments">{{a.name}}</option>
-
-            </select>
-          </div>
-        </div>
-        <div class="col">
-          <div class="form-group">
-            <select class="form-control s" id="2"
-                    formControlName="semester"
-                    (change)="updateData()">
-              <option *ngFor="let s of semesters  | keyvalue" value="{{s['value']}}">{{s['value']}}</option>
-
-            </select>
-          </div>
-        </div>
-        <div class="col">
-          <div class="form-group">
-            <select class="form-control l" id="3"
-                    formControlName="year"
-                    (change)="updateData()">
-              <option value="2020">2020</option>
-              <option value="2021">2021</option>
-              <option value="2022">2022</option>
-              <option value="2023">2023</option>
-              <option value="2024">2024</option>
-              <option value="2025">2025</option>
-            </select>
-          </div>
-        </div>
-      </form>
-    </div>
-  </div>
-
-  <div class="s-p-c-c">
-
-    <div>
-      <div class="a-r-c">
-        <p *ngIf="showResult">{{acr}}% <span><small>cumulative average result</small></span></p>
-      </div>
-      <div style="display: block" class="p-r">
-        <div class="l-c">
-          <ngx-spinner bdColor="rgba(152,61,61,0)"
-                       size="default"
-                       color="#2b2e3f"
-                       type="ball-fall"
-                       [fullScreen]="false"
-                       name="barChart"></ngx-spinner>
-        </div>
-        <canvas baseChart class="p-r"
-                [datasets]="barChartData"
-                [labels]="barChartLabels"
-                [options]="barChartOptions"
-                [legend]="barChartLegend"
-                [chartType]="barChartType">
-        </canvas>
-      </div>
-    </div>
-
-  </div>
-
-  <div class="container">
-    <div class="row ">
-      <div class="col-sm-12 p-r-c">
-        <div class="card">
-          <div class="card-body  row">
-            <div class="col">
-              <h2>75</h2>
-              <small>avgr</small>
-            </div>
-            <div class="col">
-              <h2>50</h2>
-              <small>below avgr</small>
-            </div>
-            <div class="col">
-              <h2>85</h2>
-              <small>satisfactory</small>
+      <div class="row ">
+        <div class="col-sm-12 p-r-c">
+          <div class="card">
+            <div class="card-body  row">
+              <div class="col">
+                <h2>75</h2>
+                <small>avgr</small>
+              </div>
+              <div class="col">
+                <h2>50</h2>
+                <small>below avgr</small>
+              </div>
+              <div class="col">
+                <h2>85</h2>
+                <small>satisfactory</small>
+              </div>
             </div>
           </div>
         </div>
       </div>
     </div>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
   </div>
-
 </div>
 
-<div class="s-p-r-p">
-  <div class="rh-c">
-    <p class="rh">Recommended pages</p>
-  </div>
-
-  <div class="post">
-    <div class="container">
-      <div class="row recom-con">
-        <div class="r-com-con h-scroll">
-
-          <div class="sm-c-h">
-            <div class="sm-c-h-i bcimg" style="background-image: url('./assets/images/profile3.jpg')">
-
-            </div>
-            <div class="desc-c-h">
-              <p>Get started with argon.</p>
-              <br>
-              <p class="va">View Article</p>
-            </div>
-          </div>
-          <div class="sm-c-h">
-            <div class="sm-c-h-i bcimg" style="background-image: url('./assets/images/background.jpg')">
-
-            </div>
-            <div class="desc-c-h">
-              <p>Get started with argon.</p>
-              <br>
-              <p class="va">View Article</p>
-            </div>
-          </div>
-
-        </div>
-      </div>
-    </div>
-  </div>
 
 
-  <div class="s-p-r-p-c">
-    <div class="sm-c">
-      <div class="sm-c-i bcimg" style="background-image: url('./assets/images/background.jpg')">
-      </div>
-      <div class="desc-c">
-        <p>Title of subject</p>
-        <br>
-        <p class="va">View Article</p>
-      </div>
-    </div>
-    <div class="sm-c">
-      <div class="sm-c-i bcimg" style="background-image: url('./assets/images/profile2.jpg')">
-      </div>
-      <div class="desc-c">
-        <p>Title of subject</p>
-        <br>
-        <p class="va">View Article</p>
-      </div>
-    </div>
-    <div class="sm-c">
-      <div class="sm-c-i bcimg" style="background-image: url('./assets/images/profile2.jpg')">
-      </div>
-      <div class="desc-c">
-        <p>Title of subject</p>
-        <br>
-        <p class="va">View Article</p>
-      </div>
-    </div>
-    <div class="sm-c">
-      <div class="sm-c-i bcimg" style="background-image: url('./assets/images/profile2.jpg')">
-      </div>
-      <div class="desc-c">
-        <p>Title of subject</p>
-        <br>
-        <p class="va">View Article</p>
-      </div>
-    </div>
-
-  </div>
 
 
-  <div>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-  </div>
+<!--<div class="s-p-r-p">-->
+  <!--<div class="rh-c">-->
+    <!--<p class="rh">Recommended pages</p>-->
+  <!--</div>-->
+
+  <!--<div class="post">-->
+    <!--<div class="container">-->
+      <!--<div class="row recom-con">-->
+        <!--<div class="r-com-con h-scroll">-->
+
+          <!--<div class="sm-c-h">-->
+            <!--<div class="sm-c-h-i bcimg" style="background-image: url('./assets/images/profile3.jpg')">-->
+
+            <!--</div>-->
+            <!--<div class="desc-c-h">-->
+              <!--<p>Get started with argon.</p>-->
+              <!--<br>-->
+              <!--<p class="va">View Article</p>-->
+            <!--</div>-->
+          <!--</div>-->
+          <!--<div class="sm-c-h">-->
+            <!--<div class="sm-c-h-i bcimg" style="background-image: url('./assets/images/background.jpg')">-->
+
+            <!--</div>-->
+            <!--<div class="desc-c-h">-->
+              <!--<p>Get started with argon.</p>-->
+              <!--<br>-->
+              <!--<p class="va">View Article</p>-->
+            <!--</div>-->
+          <!--</div>-->
+
+        <!--</div>-->
+      <!--</div>-->
+    <!--</div>-->
+  <!--</div>-->
 
 
-</div>
+  <!--<div class="s-p-r-p-c">-->
+    <!--<div class="sm-c">-->
+      <!--<div class="sm-c-i bcimg" style="background-image: url('./assets/images/background.jpg')">-->
+      <!--</div>-->
+      <!--<div class="desc-c">-->
+        <!--<p>Title of subject</p>-->
+        <!--<br>-->
+        <!--<p class="va">View Article</p>-->
+      <!--</div>-->
+    <!--</div>-->
+    <!--<div class="sm-c">-->
+      <!--<div class="sm-c-i bcimg" style="background-image: url('./assets/images/profile2.jpg')">-->
+      <!--</div>-->
+      <!--<div class="desc-c">-->
+        <!--<p>Title of subject</p>-->
+        <!--<br>-->
+        <!--<p class="va">View Article</p>-->
+      <!--</div>-->
+    <!--</div>-->
+    <!--<div class="sm-c">-->
+      <!--<div class="sm-c-i bcimg" style="background-image: url('./assets/images/profile2.jpg')">-->
+      <!--</div>-->
+      <!--<div class="desc-c">-->
+        <!--<p>Title of subject</p>-->
+        <!--<br>-->
+        <!--<p class="va">View Article</p>-->
+      <!--</div>-->
+    <!--</div>-->
+    <!--<div class="sm-c">-->
+      <!--<div class="sm-c-i bcimg" style="background-image: url('./assets/images/profile2.jpg')">-->
+      <!--</div>-->
+      <!--<div class="desc-c">-->
+        <!--<p>Title of subject</p>-->
+        <!--<br>-->
+        <!--<p class="va">View Article</p>-->
+      <!--</div>-->
+    <!--</div>-->
+
+  <!--</div>-->
+
+
+  <!--<div>-->
+    <!--<br>-->
+    <!--<br>-->
+    <!--<br>-->
+    <!--<br>-->
+    <!--<br>-->
+    <!--<br>-->
+    <!--<br>-->
+    <!--<br>-->
+    <!--<br>-->
+  <!--</div>-->
+
+
+<!--</div>-->
