--- a/src/app/feature-modules/user/work-board/schedule/schedule.component.html
+++ b/src/app/feature-modules/user/work-board/schedule/schedule.component.html
@@ -12,6 +12,9 @@
       <div class="td-c">
         <p class=""> Today : {{bsInlineValue | date:'EEEE , MMMM dd'}}</p>
       </div>
+      <div class="exp-con">
+
+      </div>
     </div>
   </div>
 
