--- a/src/scss/_content.scss
+++ b/src/scss/_content.scss
@@ -210,7 +210,7 @@ app-mag{
 .fc0 {
   font-size: 15px !important;
   p {
-
+    font-size: 15px !important;
     margin-bottom: 0;
   }
 }
@@ -218,7 +218,7 @@ app-mag{
 .fc1 {
   font-size: 18px !important;
   p {
-
+    font-size: 18px !important;
     margin-bottom: 0;
 
   }
@@ -227,7 +227,7 @@ app-mag{
 .fc2 {
   font-size: 21px !important;
   p {
-
+    font-size: 21px !important;
     margin-bottom: 0;
 
   }
@@ -236,7 +236,7 @@ app-mag{
 .fc3 {
   font-size: 24px !important;
   p {
-
+    font-size: 24px !important;
     margin-bottom: 0;
 
   }
@@ -489,4 +489,19 @@ app-mag{
 
 
 
+.fo-s{
+  font-family: serif !important;
+}
+
+.fo-ss{
+  font-family: sans-serif !important;
+}
+
+.fo-ms{
+  font-family: monospace !important;
+}
+
+.fo-cu{
+  font-family: cursive !important;
+}
 
