--- a/src/app/feature-modules/user/home-con/home-page/content/content.component.html
+++ b/src/app/feature-modules/user/home-con/home-page/content/content.component.html
@@ -44,9 +44,9 @@
     <!--<p>{{caption}}</p>-->
     <!--</div>-->
 
-    <form [formGroup]="caption2Form">
+    <form [formGroup]="caption2Form" class="{{font}}">
 
-      <textarea autosize class="textarea" [ngClass]="'fc' + fontClass" role="textbox" contenteditable formControlName="content"
+      <textarea autosize class="textarea" [ngClass]="'fc' + fontClass"  role="textbox" contenteditable formControlName="content"
                 placeholder="Add something ..."></textarea>
 
     </form>
@@ -107,7 +107,9 @@
 
     <div class="row" [ngClass]="showIcons ? '': 't-i'">
       <div class="col"><label for="imageimput"><i class="fa fa-photo"></i></label></div>
-      <div class="col" (click)="changeClass()"><p>አa</p></div>
+      <div class="col" (click)="changeClass()"
+           ngxLongPress2
+           (onLongPress)="onLongPress()"><p>አa</p></div>
       <div class="col"><label for="gifInput"><p>GIF</p></label></div>
       <div class="col"><i class="fa fa-link"></i></div>
       <div class="col" [popover]="popTemplate"
