--- a/src/scss/_profile.scss
+++ b/src/scss/_profile.scss
@@ -20,6 +20,10 @@
       font-size: 17px;
       line-height: 41px;
     }
+    label{
+      font-size: 18px;
+      margin: 10px;
+    }
   }
 }
 
