--- a/src/app/feature-modules/user/profile/profile/profile.component.html
+++ b/src/app/feature-modules/user/profile/profile/profile.component.html
@@ -23,6 +23,25 @@
       </div>
 
     </div>
+    <div class="bcg-o">
+      <div class="bcg-spin-c">
+
+        <!--<ngx-spinner bdColor="rgba(152,61,61,0)"-->
+                     <!--size="small"-->
+                     <!--color="#000"-->
+                     <!--type="ball-fall"-->
+                     <!--[fullScreen]="false"-->
+                     <!--name="loadingBcgImg"></ngx-spinner>-->
+
+        <ngx-spinner bdColor = ""
+                     size = "small"
+                     color = "#ffffff"
+                     type = "ball-fall"
+                     [fullScreen] = "false"
+                     name="loadingBcgImg"></ngx-spinner>
+      </div>
+
+    </div>
   </div>
 
   <div class="p-cont-con">
@@ -36,6 +55,7 @@
                      type="ball-fall"
                      [fullScreen]="false"
                      name="loadingProfilePic"></ngx-spinner>
+
         <div *ngIf="!visitingProfile" routerLink="../editprofile" class="e-b btn btn-light btn-sm">
           <i class="fa fa-camera"></i>
         </div>
