--- a/src/app/feature-modules/user/home-con/post-alt/post-alt.component.html
+++ b/src/app/feature-modules/user/home-con/post-alt/post-alt.component.html
@@ -104,7 +104,7 @@
           </div>
         </div>
 
-        <div class="col-6">
+        <div class="col-6 a-o-con">
           <div class="ic-c">
             <!--<div class="a-con more" [popover]="menuTemplate"-->
                  <!--[outsideClick]="true">-->
@@ -113,13 +113,14 @@
 
 
             <!--</div>-->
+
             <div class="a-con" (click)="like()">
               <div class="value">{{likeCount || ''}}</div>
-              <i class="fa fa-heart" [ngClass]="{'liked': isLiked}"></i>
+              <i class="fa fa-heart-o" [ngClass]="{'liked': isLiked}"></i>
             </div>
             <div class="a-con" (click)="toggleComment()">
               <div class="value">{{commentCount || ''}}</div>
-              <i class="fa fa-comment"></i>
+              <i class="fa fa-comment-o"></i>
             </div>
 
           </div>
