--- a/src/app/feature-modules/user/home-con/schoolfeed/feed-post/feed-post.component.html
+++ b/src/app/feature-modules/user/home-con/schoolfeed/feed-post/feed-post.component.html
@@ -38,7 +38,7 @@
             <!--<i class="fa fa-share-alt"></i>-->
           </div>
 
-          <div class="col-6">
+          <div class="col-6 a-o-con">
             <div class="ic-c">
               <!--<div class="a-con more">-->
 
@@ -48,9 +48,10 @@
                 <!--<div class="value">{{likeCount || ''}}</div>-->
                 <!--<i class="fa fa-heart" [ngClass]="{'liked': isLiked}"></i>-->
                 <!--</div>-->
+
               <div class="a-con" (click)="toggleComment()">
                 <div class="value">{{commentCount || ''}}</div>
-                <i class="fa fa-comment"></i>
+                <i class="fa fa-comment-o"></i>
               </div>
 
 
