--- a/src/app/feature-modules/user/search/detail/detail.component.html
+++ b/src/app/feature-modules/user/search/detail/detail.component.html
@@ -43,19 +43,24 @@
               <p class="u-n">@{{profile[0]?.userLogin}} </p>
             </div>
           </div>
-          <div class="col-6">
+          <div class="col-6 a-o-con">
             <div class="ic-c">
               <div class="a-con more" [popover]="menuTemplate"
                    [outsideClick]="true">
                 <i class="fa fa-ellipsis-v"></i>
               </div>
+              <div class="a-con" (click)="share()">
+                <!--<div class="value">{{likeCount || ''}}</div>-->
+                <!--[ngClass]="{'liked': isLiked}"-->
+                <i class="fa fa-send-o" ></i>
+              </div>
               <div class="a-con" (click)="like()">
                 <div class="value">{{likeCount || ''}}</div>
-                <i class="fa fa-heart" [ngClass]="{'liked': isLiked}"></i>
+                <i class="fa fa-heart-o" [ngClass]="{'liked': isLiked}"></i>
               </div>
               <div class="a-con" (click)="toggleComment()">
                 <div class="value">{{commentCount || ''}}</div>
-                <i class="fa fa-comment"></i>
+                <i class="fa fa-comment-o"></i>
               </div>
 
             </div>
