--- a/src/scss/_content.scss
+++ b/src/scss/_content.scss
@@ -294,37 +294,46 @@ app-mag{
 }
 
 .gg {
-  background-color: #bababa !important;
+  background-color: #f63f2c !important;
   color: #fff;
   textarea{
-    background-color: #bababa !important;
+    background-color: #f63f2c !important;
+    color: #fff;
+  }
+}
+
+.ggg {
+  background-color: #31499e !important;
+  color: #fff;
+  textarea{
+    background-color: #31499e !important;
     color: #fff;
   }
 }
 
 .bb {
-  background-color: #000 !important;
+  background-color: #1093f5 !important;
   color: #fff;
   textarea{
-    background-color: #000 !important;
+    background-color: #1093f5 !important;
     color: #fff;
   }
 }
 
 .dg {
-  background-color: #0fbf76 !important;
+  background-color: #ccdd1e !important;
   color: #fff;
   textarea{
-    background-color: #0fbf76 !important;
+    background-color: #ccdd1e !important;
     color: #fff;
   }
 }
 
 .lb {
-  background-color: #8fe3ff !important;
+  background-color: #00a6f7 !important;
   //color: #fff;
   textarea{
-    background-color: #8fe3ff !important;
+    background-color: #00a6f7 !important;
     //color: #fff;
   }
 }
@@ -339,19 +348,19 @@ app-mag{
 }
 
 .dp {
-  background-color: #a985cb !important;
+  background-color: #9c1bb2 !important;
   color: #fff;
   textarea{
-    background-color: #a985cb !important;
+    background-color: #9c1bb2 !important;
     color: #fff;
   }
 }
 
 .grn {
-  background-color: #87d55d !important;
+  background-color: #47b04a !important;
   color: #fff;
   textarea{
-    background-color: #87d55d !important;
+    background-color: #47b04a !important;
     color: #fff;
   }
 }
@@ -369,50 +378,50 @@ app-mag{
 }
 
 .rr {
-  background-color: #fe4646 !important;
+  background-color: #151515 !important;
   color: #fff;
   textarea{
-    background-color: #fe4646 !important;
+    background-color: #151515 !important;
     color: #fff;
   }
 }
 
 .dr {
-  background-color: #ba3040 !important;
+  background-color: #00bbd6 !important;
   color: #fff;
   textarea{
-    background-color: #ba3040 !important;
+    background-color: #00bbd6 !important;
     color: #fff;
   }
 }
 
 .bb {
-  background-color: #a78a6c !important;
+  background-color: #785445 !important;
   textarea{
-    background-color: #a78a6c !important;
+    background-color: #785445 !important;
   }
 }
 
 .pp {
-  background-color: #fec3f5 !important;
+  background-color: #6633b9 !important;
   textarea{
-    background-color: #fec3f5 !important;
+    background-color: #6633b9 !important;
   }
 }
 
 .do {
-  background-color: #e6ae05 !important;
+  background-color: #ffc100 !important;
   color: #fff;
   textarea{
-    background-color: #e6ae05 !important;
+    background-color: #ffc100 !important;
     color: #fff;
   }
 }
 
 .oo {
-  background-color: #ffd32d !important;
+  background-color: #feec18 !important;
   textarea{
-    background-color: #ffd32d !important;
+    background-color: #feec18 !important;
   }
 }
 
