--- a/src/app/feature-modules/user/home-con/home-page/post/post.component.html
+++ b/src/app/feature-modules/user/home-con/home-page/post/post.component.html
@@ -41,22 +41,25 @@
           </div>
         </div>
 
-        <div class="col-6">
+        <div class="col-6 a-o-con">
           <div class="ic-c">
             <div class="a-con more" [popover]="menuTemplate"
                  [outsideClick]="true">
-
               <i class="fa fa-ellipsis-v"></i>
-
-
+            </div>
+            <div class="a-con" (click)="share()">
+              <!--<div class="value">{{likeCount || ''}}</div>-->
+              <!--[ngClass]="{'liked': isLiked}"-->
+              <i class="fa fa-send-o" ></i>
             </div>
             <div class="a-con" (click)="like()">
               <div class="value">{{likeCount || ''}}</div>
-              <i class="fa fa-heart" [ngClass]="{'liked': isLiked}"></i>
+              <i class="fa fa-heart-o" [ngClass]="{'liked': isLiked}"></i>
             </div>
+
             <div class="a-con" (click)="toggleComment()">
               <div class="value">{{commentCount || ''}}</div>
-              <i class="fa fa-comment"></i>
+              <i class="fa fa-comment-o"></i>
             </div>
 
           </div>
@@ -89,7 +92,7 @@
 
 <ng-template #menuTemplate>
   <div class="e-m">
-    <p (click)="share()">Share</p>
+    <!--<p (click)="share()">Share</p>-->
     <p (click)="save()">Save</p>
     <!--<p>Report</p>-->
     <!--<p>Notify me</p>-->
