--- a/src/scss/_hahu.scss
+++ b/src/scss/_hahu.scss
@@ -294,18 +294,23 @@ $ppw: 36px;
   border-radius: $ppw/2;
   background-color: #ededed;
 }
-
+.a-o-con{
+  padding-left: 0;
+  padding-right: 10px;
+}
 .a-con {
   float: right;
   display: inline-block;
-  margin-left: 14px;
+  margin-left: 7px;
   line-height: 36px;
 
   color: #808080;
   .value {
-    float: left;
+
+    float: right;
     margin-left: 5px;
     font-size: 11px;
+    line-height: 16px;
   }
   i {
     color: #c3c3c3;
