--- a/src/app/feature-modules/user/profile/profile-setting/profile-setting.component.html
+++ b/src/app/feature-modules/user/profile/profile-setting/profile-setting.component.html
@@ -11,38 +11,38 @@
   <div class="set-n">
     <p class="l pn">{{user?.firstName}} {{user?.lastName}}</p>
     <hr>
-    <p class="s">theme</p>
+    <!--<p class="s">theme</p>-->
   </div>
 
-  <div class="theme-con">
-    <div class="t-con theme1"></div>
-    <div class="t-con theme2"></div>
-    <div class="t-con theme3"></div>
-    <div class="t-con theme4"></div>
-    <div class="t-con theme5"></div>
-    <div class="t-con theme1"></div>
-    <div class="t-con theme2"></div>
-    <div class="t-con theme3"></div>
-    <div class="t-con theme4"></div>
-    <div class="t-con theme5"></div>
-    <div class="t-con theme1"></div>
-    <div class="t-con theme2"></div>
-    <div class="t-con theme3"></div>
-    <div class="t-con theme4"></div>
-    <div class="t-con theme5"></div>
-    <div class="t-con theme1"></div>
-    <div class="t-con theme2"></div>
-    <div class="t-con theme3"></div>
-    <div class="t-con theme4"></div>
-    <div class="t-con theme5"></div>
-  </div>
+  <!--<div class="theme-con">-->
+    <!--<div class="t-con theme1"></div>-->
+    <!--<div class="t-con theme2"></div>-->
+    <!--<div class="t-con theme3"></div>-->
+    <!--<div class="t-con theme4"></div>-->
+    <!--<div class="t-con theme5"></div>-->
+    <!--<div class="t-con theme1"></div>-->
+    <!--<div class="t-con theme2"></div>-->
+    <!--<div class="t-con theme3"></div>-->
+    <!--<div class="t-con theme4"></div>-->
+    <!--<div class="t-con theme5"></div>-->
+    <!--<div class="t-con theme1"></div>-->
+    <!--<div class="t-con theme2"></div>-->
+    <!--<div class="t-con theme3"></div>-->
+    <!--<div class="t-con theme4"></div>-->
+    <!--<div class="t-con theme5"></div>-->
+    <!--<div class="t-con theme1"></div>-->
+    <!--<div class="t-con theme2"></div>-->
+    <!--<div class="t-con theme3"></div>-->
+    <!--<div class="t-con theme4"></div>-->
+    <!--<div class="t-con theme5"></div>-->
+  <!--</div>-->
 
   <div class="p-m-l">
-    <div class="ml" routerLink="../generalsetting">
-      <p>General Setting</p>
-      <small>Display, Notification, Sounds</small>
-      <i class="fa fa-angle-right float-right"></i>
-    </div>
+    <!--<div class="ml" routerLink="../generalsetting">-->
+      <!--<p>General Setting</p>-->
+      <!--<small>Display, Notification, Sounds</small>-->
+      <!--<i class="fa fa-angle-right float-right"></i>-->
+    <!--</div>-->
     <!--<div class="ml">-->
     <!--<p>Change Username</p>-->
     <!--&lt;!&ndash;<small>Display, Notification, Sounds</small>&ndash;&gt;-->
@@ -53,11 +53,11 @@
     <!--&lt;!&ndash;<small>Display, Notification, Sounds</small>&ndash;&gt;-->
     <!--&lt;!&ndash;<i class="fa fa-angle-right float-right"></i>&ndash;&gt;-->
     <!--</div>-->
-    <div class="ml" routerLink="../pagesetting">
-      <p>Pages</p>
-      <small>Adjust the visibility of your content</small>
-      <i class="fa fa-angle-right float-right"></i>
-    </div>
+    <!--<div class="ml" routerLink="../pagesetting">-->
+      <!--<p>Pages</p>-->
+      <!--<small>Adjust the visibility of your content</small>-->
+      <!--<i class="fa fa-angle-right float-right"></i>-->
+    <!--</div>-->
     <!--<div class="ml">-->
     <!--<p>Visibility</p>-->
     <!--&lt;!&ndash;<small>Adjust the visibility of your content</small>&ndash;&gt;-->
@@ -65,7 +65,7 @@
     <!--</div>-->
     <div class="ml" routerLink="../editprofile">
       <p>Change user profile</p>
-      <small>Profile info like page, gender profile picture</small>
+      <small>Edit your Bio, profile and your name.</small>
       <i class="fa fa-angle-right float-right"></i>
     </div>
     <!--<hr >-->
@@ -80,15 +80,15 @@
       <small>handle unwanted users or haters as your preference</small>
       <i class="fa fa-angle-right float-right"></i>
     </div>
-    <div class="ml">
-      <p>Accessibility</p>
-      <small>adjust your access in accordance to your use of the app</small>
+    <div class="ml" (click)="logOut()">
+      <p>Sign Out</p>
+      <!--<small>adjust your access in accordance to your use of the app</small>-->
       <i class="fa fa-angle-right float-right"></i>
     </div>
-    <div class="ml">
-      <p>reset profile</p>
-      <small>delete previous information and create a new profile</small>
-      <i class="fa fa-angle-right float-right"></i>
-    </div>
+    <!--<div class="ml">-->
+      <!--<p>reset profile</p>-->
+      <!--<small>delete previous information and create a new profile</small>-->
+      <!--<i class="fa fa-angle-right float-right"></i>-->
+    <!--</div>-->
   </div>
 </div>
